# ReachOut-AI

./: .env.example  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup_check.py
components/: apps_script.js  apps_script_v2.js
frontend/: .env.local.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddJobModal.jsx  ResumeDropZone.jsx  Sidebar.jsx  WorkflowCanvas.jsx
frontend/src/data/: api.js  hooks.js  mockData.js  supabase.js
frontend/src/views/: Auth.jsx  Chat.jsx  Dashboard.jsx  Landing.jsx  Pipeline.jsx
src/: App.jsx  auth.py  cloud_function.py  config.py  contact.py  contact_finder.py  email_generator.py  gmail_drafter.py  jd_analyzer.py  jd_fetcher.py  main.py  quality_gate.py  reauth_gmail.py  reply_monitor.py  scout_grok.py  scout_serpapi.py  sheets_handler.py  validator.py
src/views/: Auth.jsx  Dashboard.jsx
